# healthy-life-site

./: .gitignore  pyproject.toml
healthy_life_site/: manage.py
healthy_life_site/blog/: models.py
healthy_life_site/blog/migrations/: 0001_initial.py  0002_initial.py
healthy_life_site/common/: models.py
healthy_life_site/common/migrations/: 0001_initial.py  0002_initial.py
healthy_life_site/employee/: models.py
healthy_life_site/employee/migrations/: 0001_initial.py  0002_initial.py
healthy_life_site/healthy_life_site/: asgi.py  settings.py  urls.py  wsgi.py
healthy_life_site/pharmacy/: models.py
healthy_life_site/pharmacy/migrations/: 0001_initial.py  0002_initial.py
healthy_life_site/user/: apps.py  models.py  signals.py
healthy_life_site/user/migrations/: 0001_initial.py  0002_privatemessage.py  0003_alter_privatemessage_it_read.py
